--- a/src/css/output.css
+++ b/src/css/output.css
@@ -606,6 +606,10 @@ video {
   top: 0.375rem;
 }
 
+.top-7 {
+  top: 1.75rem;
+}
+
 .top-\[46px\] {
   top: 46px;
 }
@@ -616,6 +620,10 @@ video {
 
 .z-30 {
   z-index: 30;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .z-50 {
@@ -969,6 +977,12 @@ video {
   border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
 }
 
+.divide-y > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
 .divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-x-reverse: 1;
 }
@@ -992,6 +1006,10 @@ video {
 
 .overflow-y-auto {
   overflow-y: auto;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
 }
 
 .whitespace-normal {
@@ -1051,6 +1069,11 @@ video {
 .border-soundcloud-orange {
   --tw-border-opacity: 1;
   border-color: rgb(204 80 0 / var(--tw-border-opacity));
+}
+
+.bg-red-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
 .bg-soundcloud-black {
@@ -1160,6 +1183,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1168,6 +1196,11 @@ video {
 .py-0\.5 {
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pb-10 {
@@ -1400,6 +1433,10 @@ input[type="search"]::-webkit-search-results-decoration {
   background: linear-gradient(90deg, rgba(24, 26, 27, 0.1), rgb(24, 26, 27) 17px);
 }
 
+.\*\:z-20 > * {
+  z-index: 20;
+}
+
 .\*\:mr-1 > * {
   margin-right: 0.25rem;
 }
@@ -1452,9 +1489,17 @@ input[type="search"]::-webkit-search-results-decoration {
   border-radius: 0.5rem;
 }
 
+.\*\:p-1\.5 > * {
+  padding: 0.375rem;
+}
+
 .\*\:py-1\.5 > * {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
+}
+
+.\*\:pe-5 > * {
+  padding-inline-end: 1.25rem;
 }
 
 .\*\:pl-3 > * {
@@ -1503,6 +1548,14 @@ input[type="search"]::-webkit-search-results-decoration {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.active\:fill-soundcloud-text:active {
+  fill: #C8C3BC;
+}
+
+.active\:stroke-soundcloud-text:active {
+  stroke: #C8C3BC;
+}
+
 .group:hover .group-hover\:flex {
   display: flex;
 }
@@ -1549,6 +1602,10 @@ input[type="search"]::-webkit-search-results-decoration {
   .md\:size-\[170px\] {
     width: 170px;
     height: 170px;
+  }
+
+  .md\:h-64 {
+    height: 16rem;
   }
 
   .md\:w-\[170px\] {
