--- a/src/css/output.css
+++ b/src/css/output.css
@@ -606,6 +606,10 @@ video {
   top: 0.375rem;
 }
 
+.top-6 {
+  top: 1.5rem;
+}
+
 .top-7 {
   top: 1.75rem;
 }
@@ -1071,11 +1075,6 @@ video {
   border-color: rgb(204 80 0 / var(--tw-border-opacity));
 }
 
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
-}
-
 .bg-soundcloud-black {
   --tw-bg-opacity: 1;
   background-color: rgb(13 14 14 / var(--tw-bg-opacity));
@@ -1524,6 +1523,10 @@ input[type="search"]::-webkit-search-results-decoration {
   background-color: rgb(204 80 0 / var(--tw-bg-opacity));
 }
 
+.hover\:fill-soundcloud-orange:hover {
+  fill: #CC5000;
+}
+
 .hover\:text-soundcloud-orange-light:hover {
   --tw-text-opacity: 1;
   color: rgb(241 133 26 / var(--tw-text-opacity));
@@ -1540,6 +1543,10 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .hover\:\*\:fill-soundcloud-orange > *:hover {
+  fill: #CC5000;
+}
+
+.\*\:hover\:fill-soundcloud-orange:hover > * {
   fill: #CC5000;
 }
 
