--- a/src/css/input.css
+++ b/src/css/input.css
@@ -83,10 +83,12 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   box-shadow: inset 1px -50px 24px -17px rgba(0,0,0,0.64);
 }
 
-
-/** test **/
-.test {
+.outer-shadow {
   background: linear-gradient(90deg, rgba(24, 26, 27, 0.1), rgb(24, 26, 27) 17px);;
 }
+
+
+
+/** test **/
 
 
