--- a/src/css/input.css
+++ b/src/css/input.css
@@ -104,5 +104,21 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 }
 
 
+/**
+* volume changer
+**/
+#volume-con::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #333 transparent transparent transparent;
+  rotate: 90deg;
+}
+
+
 
 /** test **/
