--- a/src/css/input.css
+++ b/src/css/input.css
@@ -115,7 +115,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   margin-top: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: #333 transparent transparent transparent;
+  border-color: theme('colors.soundcloud-divide') transparent transparent transparent;
   rotate: 90deg;
 }
 
