--- a/src/css/output.css
+++ b/src/css/output.css
@@ -622,6 +622,26 @@ video {
   top: 46px;
 }
 
+.bottom-\[50px\] {
+  bottom: 50px;
+}
+
+.bottom-\[60px\] {
+  bottom: 60px;
+}
+
+.bottom-\[62px\] {
+  bottom: 62px;
+}
+
+.bottom-\[61px\] {
+  bottom: 61px;
+}
+
+.bottom-\[64px\] {
+  bottom: 64px;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -711,6 +731,10 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
 .line-clamp-1 {
@@ -823,12 +847,12 @@ video {
   height: 50px;
 }
 
-.h-full {
-  height: 100%;
+.h-\[80px\] {
+  height: 80px;
 }
 
-.h-px {
-  height: 1px;
+.h-full {
+  height: 100%;
 }
 
 .max-h-\[400px\] {
@@ -885,6 +909,42 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[80px\] {
+  width: 80px;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[120px\] {
+  width: 120px;
+}
+
+.w-\[110px\] {
+  width: 110px;
+}
+
+.w-\[105px\] {
+  width: 105px;
+}
+
+.w-\[0px\] {
+  width: 0px;
+}
+
+.w-\[5px\] {
+  width: 5px;
+}
+
+.w-\[px\] {
+  width: px;
 }
 
 .shrink-0 {
@@ -1090,6 +1150,11 @@ video {
 .border-soundcloud-orange {
   --tw-border-opacity: 1;
   border-color: rgb(204 80 0 / var(--tw-border-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-soundcloud-black {
@@ -1626,6 +1691,10 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .group:hover .group-hover\:\*\:stroke-soundcloud-orange > * {
   stroke: #CC5000;
+}
+
+.peer:hover ~ .peer-hover\:flex {
+  display: flex;
 }
 
 @media (min-width: 768px) {
