--- a/src/css/output.css
+++ b/src/css/output.css
@@ -582,12 +582,12 @@ video {
   bottom: 0px;
 }
 
-.bottom-\[66px\] {
-  bottom: 66px;
+.bottom-\[64px\] {
+  bottom: 64px;
 }
 
-.bottom-\[68px\] {
-  bottom: 68px;
+.bottom-\[66px\] {
+  bottom: 66px;
 }
 
 .left-0 {
@@ -622,24 +622,20 @@ video {
   top: 46px;
 }
 
-.bottom-\[50px\] {
-  bottom: 50px;
+.bottom-20 {
+  bottom: 5rem;
 }
 
-.bottom-\[60px\] {
-  bottom: 60px;
+.bottom-10 {
+  bottom: 2.5rem;
 }
 
-.bottom-\[62px\] {
-  bottom: 62px;
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
-.bottom-\[61px\] {
-  bottom: 61px;
-}
-
-.bottom-\[64px\] {
-  bottom: 64px;
+.bottom-8 {
+  bottom: 2rem;
 }
 
 .z-20 {
@@ -656,6 +652,10 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-2 {
@@ -733,8 +733,8 @@ video {
   margin-top: auto;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
+.me-auto {
+  margin-inline-end: auto;
 }
 
 .line-clamp-1 {
@@ -746,6 +746,10 @@ video {
 
 .block {
   display: block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -831,6 +835,16 @@ video {
   height: 100%;
 }
 
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-20 {
+  width: 5rem;
+  height: 5rem;
+}
+
 .h-\[28px\] {
   height: 28px;
 }
@@ -845,10 +859,6 @@ video {
 
 .h-\[50px\] {
   height: 50px;
-}
-
-.h-\[80px\] {
-  height: 80px;
 }
 
 .h-full {
@@ -911,40 +921,8 @@ video {
   width: 100%;
 }
 
-.w-\[80px\] {
-  width: 80px;
-}
-
-.w-\[100px\] {
-  width: 100px;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[120px\] {
-  width: 120px;
-}
-
-.w-\[110px\] {
-  width: 110px;
-}
-
-.w-\[105px\] {
-  width: 105px;
-}
-
-.w-\[0px\] {
-  width: 0px;
-}
-
-.w-\[5px\] {
-  width: 5px;
-}
-
-.w-\[px\] {
-  width: px;
+.w-\[480px\] {
+  width: 480px;
 }
 
 .shrink-0 {
@@ -1046,6 +1024,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.space-x-1\.5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.375rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.375rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .divide-x > :not([hidden]) ~ :not([hidden]) {
@@ -1152,11 +1136,6 @@ video {
   border-color: rgb(204 80 0 / var(--tw-border-opacity));
 }
 
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .bg-soundcloud-black {
   --tw-bg-opacity: 1;
   background-color: rgb(13 14 14 / var(--tw-bg-opacity));
@@ -1190,6 +1169,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-tr {
@@ -1239,6 +1223,10 @@ video {
   padding: 0.75rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -1282,6 +1270,16 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .pb-10 {
@@ -1361,6 +1359,11 @@ video {
   line-height: 1rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1380,8 +1383,18 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-soundcloud-text\/70 {
+  color: rgb(200 195 188 / 0.7);
+}
+
 .accent-soundcloud-orange {
   accent-color: #CC5000;
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline-none {
@@ -1605,6 +1618,16 @@ input[type="search"]::-webkit-search-results-decoration {
   padding-bottom: 0.375rem;
 }
 
+.\*\:px-4 > * {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.\*\:py-2 > * {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .\*\:pe-5 > * {
   padding-inline-end: 1.25rem;
 }
@@ -1626,9 +1649,19 @@ input[type="search"]::-webkit-search-results-decoration {
   border-color: rgb(204 80 0 / var(--tw-border-opacity));
 }
 
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .hover\:bg-soundcloud-orange:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(204 80 0 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-soundcloud-hover:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 34 35 / var(--tw-bg-opacity));
 }
 
 .hover\:text-soundcloud-orange-light:hover {
@@ -1667,8 +1700,16 @@ input[type="search"]::-webkit-search-results-decoration {
   stroke: #C8C3BC;
 }
 
+.group:hover .group-hover\:inline {
+  display: inline;
+}
+
 .group:hover .group-hover\:flex {
   display: flex;
+}
+
+.group:hover .group-hover\:hidden {
+  display: none;
 }
 
 .group:hover .group-hover\:border-soundcloud-orange {
@@ -1691,10 +1732,6 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .group:hover .group-hover\:\*\:stroke-soundcloud-orange > * {
   stroke: #CC5000;
-}
-
-.peer:hover ~ .peer-hover\:flex {
-  display: flex;
 }
 
 @media (min-width: 768px) {
