--- a/src/css/output.css
+++ b/src/css/output.css
@@ -566,6 +566,10 @@ video {
   border-width: 0;
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -642,6 +646,10 @@ video {
   top: 46px;
 }
 
+.-z-10 {
+  z-index: -10;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -656,6 +664,58 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-\[999999999999999999\] {
+  z-index: 999999999999999999;
+}
+
+.z-\[9999999999\] {
+  z-index: 9999999999;
+}
+
+.z-auto {
+  z-index: auto;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.-z-50 {
+  z-index: -50;
+}
+
+.z-\[\2212 2147483648\] {
+  z-index: −2147483648;
+}
+
+.z-\[2147483648\] {
+  z-index: 2147483648;
+}
+
+.-z-\[2147483648\] {
+  z-index: -2147483648;
+}
+
+.z-\[50\] {
+  z-index: 50;
+}
+
+.z-\[400\] {
+  z-index: 400;
+}
+
+.z-\[999\] {
+  z-index: 999;
+}
+
+.-z-\[999\] {
+  z-index: -999;
 }
 
 .mx-2 {
@@ -731,10 +791,6 @@ video {
 
 .mt-auto {
   margin-top: auto;
-}
-
-.ms-3 {
-  margin-inline-start: 0.75rem;
 }
 
 .line-clamp-1 {
@@ -839,6 +895,10 @@ video {
   height: 100%;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-\[28px\] {
   height: 28px;
 }
@@ -859,10 +919,6 @@ video {
   height: 100%;
 }
 
-.h-6 {
-  height: 1.5rem;
-}
-
 .max-h-\[400px\] {
   max-height: 400px;
 }
@@ -873,6 +929,10 @@ video {
 
 .max-h-\[540px\] {
   max-height: 540px;
+}
+
+.w-11 {
+  width: 2.75rem;
 }
 
 .w-52 {
@@ -927,10 +987,6 @@ video {
   width: 100%;
 }
 
-.w-11 {
-  width: 2.75rem;
-}
-
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -941,6 +997,11 @@ video {
 
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-10 {
+  --tw-translate-y: 2.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1177,14 +1238,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-200 {
+.bg-red-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-tr {
@@ -1370,10 +1426,6 @@ video {
   font-weight: 700;
 }
 
-.font-medium {
-  font-weight: 500;
-}
-
 .text-soundcloud-orange {
   --tw-text-opacity: 1;
   color: rgb(204 80 0 / var(--tw-text-opacity));
@@ -1391,11 +1443,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .accent-soundcloud-orange {
@@ -1720,28 +1767,10 @@ input[type="search"]::-webkit-search-results-decoration {
   border-width: 1px;
 }
 
-.after\:border-gray-300::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.after\:border-red-600::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(220 38 38 / var(--tw-border-opacity));
-}
-
 .after\:border-black::after {
   content: var(--tw-content);
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.after\:bg-white::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .after\:bg-black::after {
@@ -1856,11 +1885,6 @@ input[type="search"]::-webkit-search-results-decoration {
   stroke: #CC5000;
 }
 
-.peer:checked ~ .peer-checked\:bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
 .peer:checked ~ .peer-checked\:bg-soundcloud-orange {
   --tw-bg-opacity: 1;
   background-color: rgb(204 80 0 / var(--tw-bg-opacity));
@@ -1877,12 +1901,6 @@ input[type="search"]::-webkit-search-results-decoration {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.peer:checked ~ .peer-checked\:after\:border-white::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
 .peer:checked ~ .peer-checked\:after\:border-black::after {
   content: var(--tw-content);
   --tw-border-opacity: 1;
@@ -1892,33 +1910,6 @@ input[type="search"]::-webkit-search-results-decoration {
 .peer:focus ~ .peer-focus\:outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.peer:focus ~ .peer-focus\:ring-4 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.peer:focus ~ .peer-focus\:ring-1 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.peer:focus ~ .peer-focus\:ring-blue-300 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity));
-}
-
-.peer:focus ~ .peer-focus\:ring-soundcloud-orange-light {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(241 133 26 / var(--tw-ring-opacity));
-}
-
-.peer:focus ~ .peer-focus\:ring-soundcloud-orange {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(204 80 0 / var(--tw-ring-opacity));
 }
 
 @media (min-width: 768px) {
@@ -2034,48 +2025,6 @@ input[type="search"]::-webkit-search-results-decoration {
   .\32xl\:px-44 {
     padding-left: 11rem;
     padding-right: 11rem;
-  }
-}
-
-.peer:checked ~ .rtl\:peer-checked\:after\:-translate-x-full:where([dir="rtl"], [dir="rtl"] *)::after {
-  content: var(--tw-content);
-  --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@media (prefers-color-scheme: dark) {
-  .dark\:border-gray-600 {
-    --tw-border-opacity: 1;
-    border-color: rgb(75 85 99 / var(--tw-border-opacity));
-  }
-
-  .dark\:bg-gray-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-gray-300 {
-    --tw-text-opacity: 1;
-    color: rgb(209 213 219 / var(--tw-text-opacity));
-  }
-
-  .peer:focus ~ .dark\:peer-focus\:ring-blue-800 {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
-  }
-
-  .peer:focus ~ .dark\:peer-focus\:ring-soundcloud-orange {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(204 80 0 / var(--tw-ring-opacity));
-  }
-
-  .peer:focus ~ .dark\:peer-focus\:ring-soundcloud-orange-light {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(241 133 26 / var(--tw-ring-opacity));
-  }
-
-  .peer:focus ~ .dark\:peer-focus\:ring-offset-soundcloud-orange-light {
-    --tw-ring-offset-color: #F1851A;
   }
 }
 
