--- a/src/css/output.css
+++ b/src/css/output.css
@@ -598,10 +598,6 @@ video {
   bottom: 2.5rem;
 }
 
-.bottom-7 {
-  bottom: 1.75rem;
-}
-
 .bottom-\[64px\] {
   bottom: 64px;
 }
@@ -656,6 +652,18 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-\[99999\] {
+  z-index: 99999;
+}
+
+.z-\[100000\] {
+  z-index: 100000;
+}
+
+.-z-10 {
+  z-index: -10;
 }
 
 .mx-2 {
